refactored build processt to use make files and added one-shot container command as binary replacement for golang

--- a/docker-golang/Dockerfile
+++ b/docker-golang/Dockerfile
@@ -2,4 +2,7 @@ FROM ubuntu:trusty
 
 RUN apt-get update
 RUN apt-get install -y \
-  golang-go
+  build-essential \
+  golang-go \
+  gccgo \
+  git
